# mars-x

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py  temp_cython_setup.py
mars_x/: main.py
mars_x/config/: __init__.py  base_config.py  build_config.py  engine_config.py
mars_x/config_files/: build.ini  engine.ini
mars_x/cython_modules/: __init__.py  collision.c  collision.cpp  collision.pxd  collision.pyx  matrix.c  matrix.cpp  matrix.pxd  matrix.pyx  physics.c  physics.cpp  physics.pxd  physics.py  physics.pyx  quaternion.c  quaternion.cpp  quaternion.pxd  quaternion.pyx  rigidbody.c  rigidbody.cpp  rigidbody.pxd  rigidbody.pyx  vector.c  vector.cpp  vector.pxd  vector.pyx
mars_x/engine/: __init__.py  input.py  renderer.py  window.py
mars_x/game/: __init__.py  entity.py  game_world.py  player.py
mars_x/hooks/: __init__.py  hook-cython_modules.py  hook-sdl2.py
mars_x/utils/: __init__.py  build_game.py  constants.py  setup_help.py
